tests/snapshots/assets__check_file@typstfmt-148-broken-input.typ-0.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/typstfmt/148-broken-input.typ
snapshot_kind: text
---
#cite(
// Newline

= Level 1
== Level 2

Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
