tests/snapshots/assets__check_file@typstfmt-82-non-converge-list.typ-80.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/typstfmt/82-non-converge-list.typ
---
#let f(t) = t
We have next things:
- thing 1;
- thing 2;
- thing 3.

#f[
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim aeque doleamus animo, cum corpore dolemus, fieri.
]
