tests/snapshots/assets__check_file@typstfmt-84-ws-text-code.typ-40.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/typstfmt/84-ws-text-code.typ
---
#let f() = []
a#sym.RR

a#f()
